--- a/.github/workflows/build-push-on-release.yml
+++ b/.github/workflows/build-push-on-release.yml
@@ -10,17 +10,19 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v3
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USER_ID }}
           password: ${{ secrets.DOCKER_ACCESS_KEY }}
       - name: Push to Docker Hub(specified version)
         uses: docker/build-push-action@v3
         with:
+          context: ./docker
           push: true
           tags: kazuki0529/md-test-spec2excel:${{ github.event.release.tag_name }}
       - name: Push to Docker Hub(latest)
         uses: docker/build-push-action@v3
         with:
+          context: ./docker
           push: true
           tags: kazuki0529/md-test-spec2excel:latest
